--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -558,6 +558,6 @@ body {
 // Säkerhetsställer att kartan syns
 .mapFrame {
     display: block;
-    width: 100%;
+    width: 500px;
     height: 500px; 
 }
